# RustAISe

./: .gitattributes  Cargo.toml  README.md  norway.7z  sorted_ais.parquet
src/: main.rs
