[package]
name = "rustaise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.2"
num_cpus  = "1.13.1"
hashbrown = "0.12.0"
clap = "3.0.7"
memmap2 = "0.9"
ryu = "1.0"
rayon = "1.5"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3

